# metahack

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: episode.py  graders.py  main.py  models.py
data/: emails.py
server/: app.py
test/: test_graders.py
